fix grid layout spacing and change overlay links from img to span

--- a/app/assets/stylesheets/grid.less
+++ b/app/assets/stylesheets/grid.less
@@ -3,10 +3,12 @@
  */
 
 .thumb {
+    
     margin:5px;
-    display:inline-block;
-
+    float:left;
     position:relative;
+    
+    img { display:block; }
     .overlay {
         display:none;
         position:absolute;
@@ -14,11 +16,19 @@
         background:rgba(0,0,0,0.5);
         width:100%; height:100%;
         .actions {
-            margin-top:55px;
+            margin:55px 0 0 25px;
             text-align:center;
-            a img { .transition(opacity 0.3s); }
-            a:hover img {
-                opacity:0.7;
+            a {
+                float:left;
+                width:60px;
+                height:60px;
+                background-position: top left;
+                background-repeat: no-repeat;
+                .transition(opacity 0.3s);
+                &:hover { opacity: 0.7; }
+                span { display:none; }
+                &.inspect   { background-image: url('/assets/inspect.svg'); }
+                &.vote      { background-image: url('/assets/vote.svg'); }
             }
         }
         &.loading {
